# xframes-shared-c-library

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: xframes-runner.cpp  xframes-runner.h  xframes-wrapper.c  xframes-wrapper.cpp  xframes-wrapper.h
